--- a/index.html
+++ b/index.html
@@ -1,6 +1,42 @@
 
-<html>
+<!DOCTYPE html>
+  <head>
+    <title>Your page title here</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="blog-stylesheet.css">
+  </head>
+
   <body>
-    Hello DBC!
+   <div id ="title">
+
+    Janet Brown
+   </div>
+
+    <div id="nav">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">About Me</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </div>
+
+     <div id ="headshot">
+      <img src="imgs/Facebook in B&W copy.jpg" alt="Header Picture">
+    </div>
+
+
+
+    <div id="footer">
+      <ul>
+        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
+        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+      </ul>
+    </div>
+
   </body>
-  </html>
+
+</html>
