--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <ul>
         <li><a href="">Home</a></li>
         <li><a href="">About Me</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="blog-template.html">Blog</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contact</a></li>
       </ul>
