--- a/blog-template.html
+++ b/blog-template.html
@@ -14,9 +14,9 @@
 
     <div id="nav">
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="">About Me</a></li>
-        <li><a href="">Blog</a></li>
+        <li><a href="blog-template.html">Blog</a></li>
         <li><a href="">Portfolio</a></li>
         <li><a href="">Contact</a></li>
       </ul>
