--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div id="nav">
       <ul>
-        <li><a href="">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="">About Me</a></li>
         <li><a href="blog-template.html">Blog</a></li>
         <li><a href="">Portfolio</a></li>
