--- a/about.html
+++ b/about.html
@@ -27,6 +27,9 @@
       <img src="imgs/Facebook in B&W copy.jpg" alt="Header Picture">
     </div>
 
+<div id = "body">
+  Coming Soon!
+</div>
 
 
     <div id="footer">
