--- a/t1-git-blog.html
+++ b/t1-git-blog.html
@@ -15,11 +15,11 @@
 
     <div id="nav">
       <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">About Me</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contact</a></li>
+         <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="blog-template.html">Blog</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
 
