--- a/blog-template.html
+++ b/blog-template.html
@@ -29,7 +29,7 @@
     <div id="blogs">
       <ul>
         <li><a href="t1-git-blog.html">git in 3 main points...</a><span class="date">Week 1</span></li>
-        <li><a href="c1-chefs-kitchen.md">feet to the fire!!</a><span class="date">Week 1</span></li>
+        <li><a href="c1-chefs-kitchen.html">feet to the fire!!</a><span class="date">Week 1</span></li>
         <li><a href="">This is a blog post title 3</a><span class="date">Date</span></li>
         <li><a href="">This is a blog post title 4</a><span class="date">Date</span></li>
         <li><a href="">This is a blog post title 5</a><span class="date">Date</span></li>
