--- a/blog-template.html
+++ b/blog-template.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
   <head>
-    <title>Your page title here</title>
+    <title>Janet Brown</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="blog-stylesheet.css">
   </head>
