--- a/t1-git-blog.html
+++ b/t1-git-blog.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
   <head>
-    <title>Your page title here</title>
+    <title>Janet Brown</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="blog-stylesheet.css">
     <link rel="stylesheet" type="text/css" href="default-stylesheet.css">
@@ -26,6 +26,7 @@
      <div id ="headshot">
       <img src="imgs/Facebook in B&W copy.jpg" alt="Header Picture">
     </div>
+  </div>
 
     <div class="blog_content">
       <span class = "blog_title">git in 3 main points </span> <span class ="blog_subtitle">or why consultants should take lessons from developers & sleep more </span>
@@ -54,6 +55,7 @@
 
     </div>
 
+
     <div id="footer">
       <ul>
         <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
@@ -62,6 +64,7 @@
         <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
       </ul>
     </div>
+
 
   </body>
 
