add wip blog t2

--- a/blog-template.html
+++ b/blog-template.html
@@ -30,7 +30,7 @@
       <ul>
         <li><a href="t1-git-blog.html">git in 3 main points...</a><span class="date">Week 1</span></li>
         <li><a href="c1-chefs-kitchen.html">feet to the fire!!</a><span class="date">Week 1</span></li>
-        <li><a href="">This is a blog post title 3</a><span class="date">Date</span></li>
+        <li><a href="t2-css-design.html">CSS - a primer on the basics!</a><span class="date">Week 2</span></li>
         <li><a href="">This is a blog post title 4</a><span class="date">Date</span></li>
         <li><a href="">This is a blog post title 5</a><span class="date">Date</span></li>
 
