--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
      <div id ="headshot">
       <img src="imgs/Facebook in B&W copy.jpg" alt="Header Picture">
     </div>
+<div id =holder>
 
+  <p>COMING SOON -  Meantime check out the blog up there  ↑</p>
+
+</div>
 
 
     <div id="footer">
