fix footer, add logos

--- a/c1-chefs-kitchen.html
+++ b/c1-chefs-kitchen.html
@@ -40,16 +40,17 @@
 
 <p>However at this point I think my expectations of myself have changed a little. I was waiting for the moment things would sink in, that they would "click" and feel 'right'. Rather, I think that I need to view this whole experience more as a ride. I am up for the ride - I don't control it, only make some small corrections from time to time and stay safe! I am excited to start the ride and see where it takes me!</p>
 
-
-
     </div>
 
+<div id = "clearwrap">
+</div>
+
     <div id="footer">
-      <ul>
-        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+     <ul>
+        <li><a href="http://www.twitter.com"><img src="imgs/Twitter_logo_blue.png"></a></li>
+        <li><a href="http://www.facebook.com"><img src="imgs/FB-f-Logo__blue_72.png"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/LinkedIN.png"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Octocat.jpg"></a></li>
       </ul>
     </div>
 
