--- a/t1-git-blog.html
+++ b/t1-git-blog.html
@@ -44,23 +44,24 @@
 <p class="content_title">2. Locate that "final_final_version3" copy easily: </p>
 
 <p>You know you've been there - mopping up after a steering committee and the 3am finish you pulled to complete the deck? All you have to do now is to locate the final file that was used in the meeting and distribute it. Cttee_Final.ppt right ? Or how about Cttee_Finalv2.ppt? or that other one Cttee_Finalv2_asPresentedonDay.ppt? where the hell is it?
-git provides a simple way to manage all of these changes (and more). Each time a new copy of the file is saved it can be committed (and you don't even have to call it version1 , 2, 3 ) - it will magically have the last final copy available to you. And all prior copies too - at the moment they were committed. And that 3rd main point... hmm, perhaps I have left the world of consulting behind - let's stick to two ;-) </p>
+git provides a simple way to manage all of these changes (and more). Each time a new copy of the file is saved it can be committed (and you don't even have to call it version1 , 2, 3 ) - it will magically have the last final copy available to you. And all prior copies too - at the moment they were committed.
 
-<!-- <p>So when your boss magically asks for the version he saw Monday morning and "that slide with the 4 box and waterfall" to be added to the distribution copy... just go through your branches and sigh with relief! </p> -->
+<p>So when your boss magically asks for the version he saw Monday morning and "that slide with the 4 box and waterfall" to be added to the distribution copy... just go through your branches and sigh with relief! </p>
 
-<!-- <p class ="content_title ">3. Other ... </p>
+<p class ="content_title ">3. Other ... </p>
 
-<p>Well, really there always have to be 3 main points right - I've not gone that far over to the tech side ;-)</p> -->
+<p>Well, really there always have to be 3 main points right - I've not gone that far over to the tech side ;-)</p>
 
     </div>
-
+<div id = "clearwrap">
+</div>
 
     <div id="footer">
-      <ul>
-        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+  <ul>
+        <li><a href="http://www.twitter.com"><img src="imgs/Twitter_logo_blue.png"></a></li>
+        <li><a href="http://www.facebook.com"><img src="imgs/FB-f-Logo__blue_72.png"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/LinkedIN.png"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Octocat.jpg"></a></li>
       </ul>
     </div>
 
