--- a/t2-css-design.html
+++ b/t2-css-design.html
@@ -48,19 +48,18 @@
 <p> Confusingly, an element can have both classes and an id specified, so it is necessary to understand which style will be applied. When the two conflict the ID will win as it has greater specificity and CSS prioritises it. In the event that two classes are applied to the same element and they conflict, then the first listed class (in the html assignment) will win.
 
 
-<!-- <p class ="content_title ">2. Relative, Fixed, Absolute </p>
-
-<p> stuff here </p> -->
-
     </div>
+
+<div id = "clearwrap">
+</div>
 
 
     <div id="footer">
-      <ul>
-        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+     <ul>
+        <li><a href="http://www.twitter.com"><img src="imgs/Twitter_logo_blue.png"></a></li>
+        <li><a href="http://www.facebook.com"><img src="imgs/FB-f-Logo__blue_72.png"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/LinkedIN.png"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Octocat.jpg"></a></li>
       </ul>
     </div>
 
