--- a/blog-template.html
+++ b/blog-template.html
@@ -3,7 +3,9 @@
   <head>
     <title>Janet Brown</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="default-stylesheet.css">
     <link rel="stylesheet" type="text/css" href="blog-stylesheet.css">
+
   </head>
 
   <body>
@@ -37,12 +39,15 @@
       </ul>
     </div>
 
+<div id = "clearwrap">
+</div>
+
     <div id="footer">
-      <ul>
-        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+       <ul>
+        <li><a href="http://www.twitter.com"><img src="imgs/Twitter_logo_blue.png"></a></li>
+        <li><a href="http://www.facebook.com"><img src="imgs/FB-f-Logo__blue_72.png"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/LinkedIN.png"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Octocat.jpg"></a></li>
       </ul>
     </div>
 
