--- a/index.html
+++ b/index.html
@@ -31,21 +31,27 @@
      <div id ="headshot">
       <img src="imgs/Facebook in B&W copy.jpg" alt="Header Picture">
     </div>
-<div id =holder>
 
-  <p>COMING SOON -  Meantime check out the blog up there  ↑</p>
+
+<div id =holder>
+<p><span class ="bold">Dreams </span> <span>in code ...</span></p>
+     <p> <span class ="bold">Adventures </span> <span> in building ...</span></p>
+      <p><span class ="bold">Work </span> <span> in progress ...</span></p>
 
 </div>
 
+<div id = "clearwrap">
+</div>
 
     <div id="footer">
+
       <ul>
-        <li><a href="http://www.twitter.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.plus.google.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.linkedin.com"><img src="imgs/Eternity.jpg"></a></li>
-        <li><a href="http://www.github.com/"><img src="imgs/Eternity.jpg"></a></li>
+        <li><a href="http://www.twitter.com"><img src="imgs/Twitter_logo_blue.png"></a></li>
+        <li><a href="http://www.facebook.com"><img src="imgs/FB-f-Logo__blue_72.png"></a></li>
+        <li><a href="http://www.linkedin.com"><img src="imgs/LinkedIN.png"></a></li>
+        <li><a href="http://www.github.com/"><img src="imgs/Octocat.jpg"></a></li>
       </ul>
-    </div>
+  </div>
 
 
   </body>
