--- a/blog-index.html
+++ b/blog-index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About Me</a></li>
-        <li><a href="blog-template.html">Blog</a></li>
+        <li><a href="blog-index.html">Blog</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
