add c3 link on blog index

--- a/blog-index.html
+++ b/blog-index.html
@@ -34,7 +34,7 @@
         <li><a href="c1-chefs-kitchen.html">feet to the fire!!</a><span class="date">Week 1</span></li>
         <li><a href="t2-css-design.html">CSS - a primer on the basics!</a><span class="date">Week 2</span></li>
         <li><a href="t3-arrays-hashes.html">Hashes & Arrays</a><span class="date">Week 3</span></li>
-       <!--  <li><a href="">This is a blog post title 5</a><span class="date">Date</span></li> -->
+        <li><a href="c3_thinking-style.html">Stylish thinking & growing at DBC...</a><span class="date">Week 3</span></li>
 
       </ul>
     </div>
