--- a/blog-index.html
+++ b/blog-index.html
@@ -36,7 +36,7 @@
         <li><a href="t3-arrays-hashes.html">Hashes & Arrays</a><span class="date">Week 3</span></li>
         <li><a href="c3_thinking-style.html">Stylish thinking & growing at DBC...</a><span class="date">Week 3</span></li>
         <li><a href="t4-enumerable-methods.html">Mapping your way around arrays...</a><span class="date">Week 4</span></li>
-        <!-- <li><a href="c3_thinking-style.html">Stylish thinking & growing at DBC...</a><span class="date">Week 3</span></li> -->
+        <li><a href="c4-tech-issues.html">Net neutrality today...</a><span class="date">Week 4</span></li>
 
       </ul>
     </div>
