--- a/t4-enumerable-methods.html
+++ b/t4-enumerable-methods.html
@@ -33,7 +33,7 @@
 
 <p class ="blog_date">14th December 2014</p>
 
-<p>Ruby has proven itself as truly intuitive and closer to english than any other language I have played with to date. And it is, within reason, very user friendly - one of the great parts of that is the Ruby Enumerables module. In very simple terms the <a href = "ww.ruby-doc.org/core-2.1.5/Array.html#method-i-each"> 'Enumerable Module' </a> provides tonnes of iteration methods. Iteration Methods?  </p>
+<p>Ruby has proven itself as truly intuitive and closer to english than any other language I have played with to date. And it is, within reason, very user friendly - one of the great parts of that is the Ruby Enumerables module. In very simple terms the <a href = "http://www.ruby-doc.org/core-2.1.5/Array.html#method-i-each"> 'Enumerable Module' </a> provides tonnes of iteration methods. Iteration Methods?  </p>
 
 <p class="content_title">1. Iteration Methods?! </p>
 
