--- a/blog-index.html
+++ b/blog-index.html
@@ -37,6 +37,7 @@
         <li><a href="c3_thinking-style.html">Stylish thinking & growing at DBC...</a><span class="date">Week 3</span></li>
         <li><a href="t4-enumerable-methods.html">Mapping your way around arrays...</a><span class="date">Week 4</span></li>
         <li><a href="c4-tech-issues.html">Net neutrality today...</a><span class="date">Week 4</span></li>
+        <li><a href="c4-tech-issues.html">Classes & Cars ...</a><span class="date">Week 5</span></li>
 
       </ul>
     </div>
