--- a/blog-index.html
+++ b/blog-index.html
@@ -38,7 +38,7 @@
         <li><a href="t4-enumerable-methods.html">Mapping your way around arrays...</a><span class="date">Week 4</span></li>
         <li><a href="c4-tech-issues.html">Net neutrality today...</a><span class="date">Week 4</span></li>
         <li><a href="t5-ruby-classes.html">Classes & Cars ...</a><span class="date">Week 5</span></li>
-
+        <li><a href="c5-feedback.html">Sharing is caring </a><span class="date">Week 4</span></li>
       </ul>
     </div>
 
