--- a/blog-index.html
+++ b/blog-index.html
@@ -41,9 +41,9 @@
         <li><a href="c5-feedback.html">Sharing is caring </a><span class="date">Week 5</span></li>
         <li><a href="t6-oop-concepts.html">Ruby variable scoping </a><span class="date">Week 6</span></li>
          <li><a href="c6-stereotype-threat.html">Stereotype Threat </a><span class="date">Week 6</span></li>
-          <li><a href="t7-JavaScript.html">Ruby vs Javascript </a><span class="date">Week 7</span></li>
+        <li><a href="t7-JavaScript.html">Ruby vs Javascript </a><span class="date">Week 7</span></li>
+        <li><a href="c7-values.html">Courage </a><span class="date">Week 7</span></li>
 
-         
       </ul>
     </div>
 
