--- a/blog-index.html
+++ b/blog-index.html
@@ -43,7 +43,7 @@
          <li><a href="c6-stereotype-threat.html">Stereotype Threat </a><span class="date">Week 6</span></li>
         <li><a href="t7-JavaScript.html">Ruby vs Javascript </a><span class="date">Week 7</span></li>
         <li><a href="c7-values.html">Courage </a><span class="date">Week 7</span></li>
-        <li><a href="cheatsheet/cheat-sheet.html">Some Command Line Cheats </a><span class="date">Week 7</span></li>
+        <li><a href="cheat-sheet.html"> Some Command Line Cheats </a><span class="date">Week 7</span></li>
 
       </ul>
     </div>
