--- a/blog-index.html
+++ b/blog-index.html
@@ -44,6 +44,7 @@
         <li><a href="t7-JavaScript.html">Ruby vs Javascript </a><span class="date">Week 7</span></li>
         <li><a href="c7-values.html">Courage </a><span class="date">Week 7</span></li>
         <li><a href="cheat-sheet.html"> Some Command Line Cheats </a><span class="date">Week 7</span></li>
+        <li><a href="t8-tech.html"> TDD</a><span class="date">Week 8</span></li>
 
       </ul>
     </div>
