--- a/blog-index.html
+++ b/blog-index.html
@@ -45,6 +45,8 @@
         <li><a href="c7-values.html">Courage </a><span class="date">Week 7</span></li>
         <li><a href="cheat-sheet.html"> Some Command Line Cheats </a><span class="date">Week 7</span></li>
         <li><a href="t8-tech.html"> TDD</a><span class="date">Week 8</span></li>
+        <li><a href="c9-conflict.html"> Conflict</a><span class="date">Week 8</span></li>
+
 
       </ul>
     </div>
