--- a/blog-index.html
+++ b/blog-index.html
@@ -46,6 +46,7 @@
         <li><a href="cheat-sheet.html"> Some Command Line Cheats </a><span class="date">Week 7</span></li>
         <li><a href="t8-tech.html"> TDD</a><span class="date">Week 8</span></li>
         <li><a href="c8-conflict.html"> Conflict</a><span class="date">Week 8</span></li>
+         <li><a href="c9-questions.html"> Questions</a><span class="date">Week 9</span></li>
 
 
       </ul>
